--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
 
             <div class="header__title">
              <h1>Social Media dashboard</h1>
-             Total Followers: 23,004
+             <span class="header__subtitle">Total Followers: 23,004</span>
             </div>
 
              <fieldset class="header__toggle toggle" aria-label="theme toggle" role="radiogroup">
                 <label for="dark">Dark</label>
+                <label for="system">System</label>
+                <label for="light">Light</label>
                 <div class="toggle__wrapper">
                     <input type="radio" name="theme" id="dark"/>
                     <input type="radio" name="theme" id="system"  checked />
@@ -53,8 +55,6 @@
                     <span aria-hidden="true" class="toggle__button"></span>
                     
                 </div>
-                <label for="system">System Pref</label>
-                <label for="light">Light</label>
                 
              </fieldset>
         </header>
