--- a/index.html
+++ b/index.html
@@ -60,11 +60,25 @@
         </header>
 
        <main>
-            <section>
+            <section class="container">
+
+                <div class="card">
+                    <div class="card__platform">
+                        <img class="card__icon" src="/images/icon-facebook.svg" alt="facebook icon" />
+                        <div class="card__username">@nathanf</div>
+                    </div>
+                    <div class="card__count card__count--big">
+                        1987
+                        <div class="card__label">Followers</div>
+                    </div>
+
+                    <div class="card__change">12 Today </div>
+
+                </div>
 
             </section>
             <p>Wagwan breddah</p>
-            @nathanf 1987 Followers 12 Today @nathanf
+               @nathanf
 		1044 Followers 99 Today @realnathanf 11k Followers 1099 Today Nathan F. 8239
 		Subscribers 144 Today Overview - Today Page Views 87 3% Likes 52 2% Likes
 		5462 2257% Profile Views 52k 1375% Retweets 117 303% Likes 507 553% Likes
